Support external textures (samplerExternalOES) in ShaderEffect

samplerExternalOES type defined in OES_EGL_image_external extension
is used on embedded platforms to achieve zero-copy of textures.

[ChangeLog][Qt Quick] Added support for samplerExternalOES sampler
type in ShaderEffect

Task-number: QTBUG-59462
Change-Id: Ib1e864f2e1321949b0a6539d37b92d2b62541ea8
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>